New layout theme and sidebar implementation. minor adjustements to legacy visualizations to conform to the new theme

--- a/WebContent/cloudDSFVisualizations.html
+++ b/WebContent/cloudDSFVisualizations.html
@@ -65,8 +65,9 @@ limitations under the License.
 			<!-- Collect the nav links, forms, and other content for toggling -->
 			<nav id="navbar" class="collapse navbar-collapse" role="navigation">
 				<ul class="nav navbar-nav nav-justified">
-					<li><a href="./index.html"> <span
-							class="glyphicon glyphicon-home"></span> <span><strong>
+					<li><a href="./index.html"> <!-- <span
+							class="glyphicon glyphicon-home"></span>  -->
+							<span><strong>
 									CloudDSF+</strong></span></a></li>
 					<li><a href="./cloudDSFPrototype.html"> <!-- <span
 							class="glyphicon glyphicon-globe"></span> --> <span>Prototype</span>
