--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -44,8 +44,8 @@
 			<!-- Collect the nav links, forms, and other content for toggling -->
 			<nav id="navbar" class="collapse navbar-collapse" role="navigation">
 				<ul class="nav navbar-nav nav-justified">
-					<li class="active"><a href="./index.html"> <span
-							class="glyphicon glyphicon-home"></span> <span><strong>
+					<li class="active"><a href="./index.html"> <!-- <span
+							class="glyphicon glyphicon-home"></span> --> <span><strong>
 									CloudDSF+</strong></span></a></li>
 					<li><a href="./cloudDSFPrototype.html"> <!-- <span
 							class="glyphicon glyphicon-globe"></span> --> <span>Prototype</span>
@@ -54,7 +54,7 @@
 							class="glyphicon glyphicon-book"> </span>  --> <span>Knowledge
 								Base</span>
 					</a></li>
-					<li><a href="./cloudDSFVisualization.html"> <!--  <span
+					<li><a href="./cloudDSFVisualizations.html"> <!--  <span
 							class="glyphicon glyphicon-picture"></span> --> <span>CloudDSF
 								Visualizations</span>
 					</a></li>
