--- a/WebContent/cloudDSFPrototype.html
+++ b/WebContent/cloudDSFPrototype.html
@@ -51,8 +51,8 @@
 			<!-- Collect the nav links, forms, and other content for toggling -->
 			<nav id="navbar" class="collapse navbar-collapse" role="navigation">
 				<ul class="nav navbar-nav nav-justified">
-					<li><a href="./index.html"> <span
-							class="glyphicon glyphicon-home"></span> <span><strong>
+					<li><a href="./index.html"> <!-- <span
+							class="glyphicon glyphicon-home"></span> --> <span><strong>
 									CloudDSF+</strong></span></a></li>
 					<li class="active"><a href="./cloudDSFPrototype.html"> <!-- <span
 							class="glyphicon glyphicon-globe"></span> --> <span>Prototype</span>
@@ -61,7 +61,7 @@
 							class="glyphicon glyphicon-book"> </span>  --> <span>Knowledge
 								Base</span>
 					</a></li>
-					<li><a href="./cloudDSFVisualization.html"> <!--  <span
+					<li><a href="./cloudDSFVisualizations.html"> <!--  <span
 							class="glyphicon glyphicon-picture"></span> --> <span>CloudDSF
 								Visualizations</span>
 					</a></li>
@@ -77,26 +77,28 @@
 
 	<div class="container-fluid">
 		<div class="row row-offcanvas row-offcanvas-left active">
-			<div class="col-md-2 sidebar-offcanvas" id="sidebar"
-				role="navigation">
-				<div class="list-group">
-					<a id="btnList_DecRel" href="#" class="list-group-item active">Decision
-						Relations</a> <a id="btnList_OutRel" href="#" class="list-group-item">Outcome
-						Relations</a> <a href="#" class="list-group-item">Link</a>
-				</div>
+
+			<div class="col-sm-12 col-md-2 navbar-inverse sidebar-offcanvas"
+				id="sidebar" role="navigation">
+				<ul class="nav navbar-nav">
+					<li class="active"><a id="btnList_DecRel" href="#"> <span><strong>
+									Hierarchical Layout</strong></span></a></li>
+					<li><a href="#"> <span>Decision Relations</span>
+					</a></li>
+					<li><a href="#"> <span>Outcome Relations</span>
+					</a></li>
+				</ul>
 				<button id="toggleButton" type="button"
-					class="btn btn-primary btn-xs" data-toggle="offcanvas">
+					class="btn btn-primary hidden-sd hidden-xs" data-toggle="offcanvas">
 					<span class="glyphicon glyphicon-chevron-left"></span>
 				</button>
 			</div>
-			<!--/.sidebar-offcanvas-->
-			<div class="col-md-10">
-				<div class="row">
-					<div class="col-md-12 text-left">
-						<div id="toolbarDecisions" class="hidden">
-							<div id="buttonGroupRelations" class="btn-group">
-								<!-- data-toggle="buttons"> -->
 
+			<div class="col-sm-12 col-md-10">
+				<div class="row">
+					<div class="col-md-12">
+									<div id="toolbarDecisions" class="hidden">
+							<div id="buttonGroupRelations" class="btn-group">
 								<label class="btn btn-success"> <input type="checkbox"
 									value="Influencing" autocomplete="off">Influencing
 								</label> <label class="btn btn-danger"> <input value="Requiring"
@@ -107,8 +109,6 @@
 									value="Binding" autocomplete="off">Binding
 								</label>
 							</div>
-							<!-- 							<button id="updateDecisionRelations" type="button"
-								class="btn btn-primary">Update Relations</button> -->
 						</div>
 					</div>
 				</div>
@@ -119,7 +119,6 @@
 			</div>
 		</div>
 	</div>
-	<hr>
 
 	<footer class="footer">
 		<div class="container">
@@ -130,7 +129,5 @@
 	<!-- Include for Visualization -->
 	<!-- 	<script src="js.cdsfPlus.js" type="text/javascript"></script> -->
 	<script src="js/cdsfPlus-layout.js" type="text/javascript"></script>
-	<script src="js/decisionRelations.js" type="text/javascript"></script>
-	<script src="js/outcomeRelations.js" type="text/javascript"></script>
 </body>
 </html>
