--- a/WebContent/knowledgeBase.html
+++ b/WebContent/knowledgeBase.html
@@ -15,10 +15,11 @@
 
 <!-- Global Style Sheets  -->
 <link href="./css/bootstrap.min.css" rel="stylesheet" />
+<link href="./css/jasny-bootstrap.min.css" rel="stylesheet" />
 <link href="./css/cdsfPlus.css" rel="stylesheet" />
 
 <!-- Custom Style Sheets -->
-
+<link href="./css/knowledgeBase.css" rel="stylesheet" />
 
 <!-- JavaScript Libraries -->
 <script src="./js/lib/jquery-1.11.1.min.js" type="text/javascript"></script>
@@ -27,7 +28,6 @@
 </head>
 
 <body>
-
 	<header class="navbar navbar-inverse navbar-static-top "
 		role="navigation">
 		<div class="container">
@@ -45,8 +45,8 @@
 			<!-- Collect the nav links, forms, and other content for toggling -->
 			<nav id="navbar" class="collapse navbar-collapse" role="navigation">
 				<ul class="nav navbar-nav nav-justified">
-					<li><a href="./index.html"> <span
-							class="glyphicon glyphicon-home"></span> <span><strong>
+					<li><a href="./index.html"> <!-- <span
+							class="glyphicon glyphicon-home"></span> --> <span><strong>
 									CloudDSF+</strong></span></a></li>
 					<li><a href="./cloudDSFPrototype.html"> <!-- <span
 							class="glyphicon glyphicon-globe"></span> --> <span>Prototype</span>
@@ -55,7 +55,7 @@
 							class="glyphicon glyphicon-book"> </span>  --> <span>Knowledge
 								Base</span>
 					</a></li>
-					<li><a href="./cloudDSFVisualization.html"> <!--  <span
+					<li><a href="./cloudDSFVisualizations.html"> <!--  <span
 							class="glyphicon glyphicon-picture"></span> --> <span>CloudDSF
 								Visualizations</span>
 					</a></li>
@@ -64,35 +64,32 @@
 					</a></li>
 				</ul>
 			</nav>
-			<!-- /.navbar-collapse -->
 		</div>
-		<!-- /.container-fluid -->
 	</header>
 
 	<div class="container-fluid">
 		<div class="row row-offcanvas row-offcanvas-left active">
-			<div class="col-md-2 sidebar-offcanvas" id="sidebar"
-				role="navigation">
-				<div class="list-group">
-					<a id="buttonTree" href="#" class="list-group-item active">Tree
-						Layout</a> <a href="#" class="list-group-item">Link</a> <a href="#"
-						class="list-group-item">Link</a>
-				</div>
+
+			<div class="col-sm-12 col-md-2 navbar-inverse sidebar-offcanvas"
+				id="sidebar" role="navigation">
+				<ul class="nav navbar-nav">
+					<li class="active"><a id="bt_treeLayout" href="#"> <span><strong>
+									Hierarchical Layout</strong></span></a></li>
+					<li><a id="btnList_DecRel" href="#"> <span>Decision Relations</span>
+					</a></li>
+					<li><a id="btnList_OutRel" href="#"> <span>Outcome Relations</span>
+					</a></li>
+				</ul>
 				<button id="toggleButton" type="button"
-					class="btn btn-primary btn-xs" data-toggle="offcanvas">
+					class="btn btn-primary hidden-sd hidden-xs" data-toggle="offcanvas">
 					<span class="glyphicon glyphicon-chevron-left"></span>
 				</button>
 			</div>
-			<!--/.sidebar-offcanvas-->
 
-			<div class="col-md-10">
+			<div class="col-sm-12 col-md-10">
 				<div class="row">
-					<div class="col-md-12 text-left">
-						<div class="btn-group">
-							<!-- 	<button id="buttonTree" type="button" class="btn btn-primary">Tree</button> -->
-							<!-- 							<button id="buttonPartition" type="button" class="btn btn-info">Partition</button>
-							<button id="buttonTreeMap" type="button" class="btn btn-sucess">TreeMap</button> -->
-						</div>
+					<div class="col-md-12">
+						
 					</div>
 				</div>
 				<div class="row">
@@ -102,17 +99,16 @@
 		</div>
 	</div>
 
-	<hr>
-
 	<footer class="footer">
 		<div class="container">
-			<p>Copyright 2014 Balduin Metz</p>
+			<p>University of Sutttgart - Institute of Architecture of
+				Application Systems</p>
 		</div>
 	</footer>
 
 	<!-- Include for Visualization -->
-	<script src="js/treeLayout.js" type="text/javascript"></script>
 	<script src="js/cdsfPlus-layout.js" type="text/javascript"></script>
+	<script src="js/treeLayout.js" type="text/javascript"></script>
 
 </body>
 </html>
