minor adjustments to footer and links

--- a/WebContent/about.html
+++ b/WebContent/about.html
@@ -62,9 +62,7 @@
 					</a></li>
 				</ul>
 			</nav>
-			<!-- /.navbar-collapse -->
 		</div>
-		<!-- /.container-fluid -->
 	</header>
 
 	<div class="container">
@@ -202,11 +200,13 @@
 			</div>
 		</div>
 	</div>
-	<hr>
+
 	<footer class="footer">
 		<div class="container">
-			<p>Copyright 2014 Alexander Darsow</p>
+			<p>University of Sutttgart - Institute of Architecture of
+				Application Systems</p>
 		</div>
 	</footer>
+	
 </body>
 </html>
