--- a/WebContent/cloudDSFPrototype.html
+++ b/WebContent/cloudDSFPrototype.html
@@ -70,9 +70,7 @@
 					</a></li>
 				</ul>
 			</nav>
-			<!-- /.navbar-collapse -->
 		</div>
-		<!-- /.container-fluid -->
 	</header>
 
 	<div class="container-fluid">
@@ -122,12 +120,12 @@
 
 	<footer class="footer">
 		<div class="container">
-			<p>Copyright 2014 Balduin Metz</p>
+			<p>University of Sutttgart - Institute of Architecture of
+				Application Systems</p>
 		</div>
 	</footer>
 
 	<!-- Include for Visualization -->
-	<!-- 	<script src="js.cdsfPlus.js" type="text/javascript"></script> -->
 	<script src="js/cdsfPlus-layout.js" type="text/javascript"></script>
 </body>
 </html>
