--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -63,9 +63,7 @@
 					</a></li>
 				</ul>
 			</nav>
-			<!-- /.navbar-collapse -->
 		</div>
-		<!-- /.container-fluid -->
 	</header>
 
 	<div class="container">
@@ -77,7 +75,7 @@
 						decision makers, who consider the migration of an existing
 						application to the Cloud.</p>
 					<p>
-						<a href="./cloudDSFVisualization.html"
+						<a href="./cloudDSFVisualizations.html"
 							class="btn btn-primary btn-lg" role="button">Prototypical
 							Implementation</a>
 					</p>
@@ -122,7 +120,7 @@
 			</div>
 		</div>
 	</div>
-	<hr>
+
 	<footer class="footer">
 		<div class="container">
 			<p>University of Sutttgart - Institute of Architecture of
