--- a/WebContent/cloudDSFVisualizations.html
+++ b/WebContent/cloudDSFVisualizations.html
@@ -66,8 +66,7 @@ limitations under the License.
 			<nav id="navbar" class="collapse navbar-collapse" role="navigation">
 				<ul class="nav navbar-nav nav-justified">
 					<li><a href="./index.html"> <!-- <span
-							class="glyphicon glyphicon-home"></span>  -->
-							<span><strong>
+							class="glyphicon glyphicon-home"></span>  --> <span><strong>
 									CloudDSF+</strong></span></a></li>
 					<li><a href="./cloudDSFPrototype.html"> <!-- <span
 							class="glyphicon glyphicon-globe"></span> --> <span>Prototype</span>
@@ -76,7 +75,7 @@ limitations under the License.
 							class="glyphicon glyphicon-book"> </span>  --> <span>Knowledge
 								Base</span>
 					</a></li>
-					<li class="active"><a href="./cloudDSFVisualization.html">
+					<li class="active"><a href="./cloudDSFVisualizations.html">
 							<!--  <span
 							class="glyphicon glyphicon-picture"></span> --> <span>CloudDSF
 								Visualizations</span>
@@ -86,9 +85,7 @@ limitations under the License.
 					</a></li>
 				</ul>
 			</nav>
-			<!-- /.navbar-collapse -->
 		</div>
-		<!-- /.container-fluid -->
 	</header>
 
 	<div class="container">
@@ -127,11 +124,11 @@ limitations under the License.
 
 	<div class="container-fluid">
 		<div class="row">
-			<div id="visContent" class="col-lg-9"></div>
-			<div id="visRightDIV" class="col-lg-3">
+			<div id="visContent" class="col-md 10 col-lg-9"></div>
+			<div id="visRightDIV" class="col-md 2 col-lg-3">
 
 				<div class="visPanelHeader">
-					<div class="visPanelHeaderIconLeft">
+					<div class="visPanelHeaderIconLeft pull-left">
 						<a id="visPanelSettingsIconToogle" href="#"> <span
 							class="glyphicon glyphicon-cog"></span>
 						</a>
@@ -145,7 +142,7 @@ limitations under the License.
 				<div id="visPanelSettingsContent" class="visPanelContent"></div>
 
 				<div class="visPanelHeader">
-					<div class="visPanelHeaderIconLeft">
+					<div class="visPanelHeaderIconLeft pull-left">
 						<a id="visPanelInfoIconToogle" href="#"> <span
 							class="glyphicon glyphicon-info-sign"></span>
 						</a>
@@ -160,7 +157,7 @@ limitations under the License.
 				<div id="visRightContent" class="visPanelContent">
 					<div id="visInfoLabelBOX">
 						<div id="visInfoLabelTextBOX">
-							<h3>Select Service Provider / Offering</h3>
+							<h4>Select Service Provider / Offering</h4>
 						</div>
 						<div id="visInfoLabelTypeBOX" class="">
 							<span>Decision</span>
@@ -172,11 +169,10 @@ limitations under the License.
 	</div>
 	<!-- 	<div class="clearfix"></div> -->
 
-	<hr style="margin-top: 0px">
-
 	<footer class="footer">
 		<div class="container">
-			<p>Copyright 2014 Alexander Darsow</p>
+			<p>University of Sutttgart - Institute of Architecture of
+				Application Systems</p>
 		</div>
 	</footer>
 
