--- a/WebContent/template.html
+++ b/WebContent/template.html
@@ -15,7 +15,7 @@
 
 <!-- Global Style Sheets  -->
 <link href="./css/bootstrap.min.css" rel="stylesheet" />
-<link href="./css/defaultNavBar.css" rel="stylesheet" />
+<link href="./css/cdsfPlus.css" rel="stylesheet" />
 
 <!-- Custom Style Sheets -->
 
@@ -23,11 +23,38 @@
 <!-- JavaScript Libraries -->
 <script src="./js/lib/jquery-1.11.1.min.js" type="text/javascript"></script>
 <script src="./js/lib/bootstrap.min.js" type="text/javascript"></script>
-<script src="./js/lib/d3.4.13.min.js" type="text/javascript"></script>
+<script type="text/javascript">
+	$(document).ready(function() {
+		$('[data-toggle="offcanvas"]').click(function() {
+			$('.row-offcanvas').toggleClass('active')
+		});
+	});
+</script>
+<style type="text/css">
+/*
+ * Style tweaks
+ * --------------------------------------------------
+ */
+html, body {
+	overflow-x: hidden; /* Prevent scroll on narrow devices */
+}
 
+body {
+	padding-top: 70px;
+}
+
+footer {
+	padding: 30px 0;
+}
+
+/*
+ * Off Canvas
+ * --------------------------------------------------
+ */
+</style>
 </head>
 <body>
-	<header class="navbar navbar-default navbar-static-top "
+	<header class="navbar navbar-inverse navbar-static-top "
 		role="navigation">
 		<div class="container">
 			<!-- Brand and toggle get grouped for better mobile display -->
@@ -43,7 +70,7 @@
 
 			<!-- Collect the nav links, forms, and other content for toggling -->
 			<nav id="navbar" class="collapse navbar-collapse" role="navigation">
-				<ul class="nav navbar-nav">
+				<ul class="nav navbar-nav nav-justified">
 					<li class="active"><a href="./index.html"> <span
 							class="glyphicon glyphicon-home"></span> <span><strong>
 									CloudDSF+</strong></span></a></li>
@@ -67,63 +94,61 @@
 		</div>
 		<!-- /.container-fluid -->
 	</header>
-	
-	
-	<div class="container">
-		<div class="row">
-			<div class="col-md-12">
+
+
+
+	<div class="container-fluid">
+
+		<div class="row row-offcanvas row-offcanvas-left">
+
+
+			<div class="col-sm-12 col-md-2 navbar-inverse sidebar-offcanvas"
+				id="sidebar" role="navigation">
+
+				<ul class="nav navbar-nav">
+					<li><a href="./index.html"> <span
+							class="glyphicon glyphicon-home"></span> <span><strong>
+									CloudDSF+</strong></span></a></li>
+					<li><a href="./cloudDSFPrototype.html"> <!-- <span
+							class="glyphicon glyphicon-globe"></span> --> <span>Prototype</span>
+					</a></li>
+					<li class="active"><a href="./knowledgeBase.html"> <!--  <span
+							class="glyphicon glyphicon-book"> </span>  --> <span>Knowledge
+								Base</span>
+					</a></li>
+					<li><a href="./cloudDSFVisualization.html"> <!--  <span
+							class="glyphicon glyphicon-picture"></span> --> <span>CloudDSF
+								Visualizations</span>
+					</a></li>
+					<li><a href="./about.html"> <!-- <span
+							class="glyphicon glyphicon-flag"></span> --> <span>About</span>
+					</a></li>
+				</ul>
+				<button id="toggleButton" type="button"
+					class="btn btn-primary hidden-sd hidden-xs" data-toggle="offcanvas">
+					<span class="glyphicon glyphicon-chevron-left"></span>
+				</button>
+			</div>
+			<!--/.sidebar-offcanvas-->
+
+
+			<div class="col-sm-12 col-md-10">
+				<p class="pull-left "></p>
 				<div class="jumbotron">
-					<h1>The Cloud Decision Support Framework</h1>
-					<p>The Cloud Decision Support Framework (CloudDSF) helps
-						decision makers, who consider the migration of an existing
-						application to the Cloud.</p>
-					<p>
-						<a href="./cloudDSFVisualization.html"
-							class="btn btn-primary btn-lg" role="button">Prototypical
-							Implementation</a>
-					</p>
+					<h1>Hello, world!</h1>
+					<p>This is an example to show the potential of an offcanvas
+						layout pattern in Bootstrap. Try some responsive-range viewport
+						sizes to see it in action.</p>
 				</div>
-				<div class="col-md-12 text-center">
-					<img src="./img/layout/titleImage.png" alt="CloudDSF Title Image" />
-				</div>
+
 			</div>
 		</div>
-		<div class="row">
-			<div class="col-md-5">
-				<h3>Main Approach</h3>
-				<p>
-					The CloudDSF is based on <a
-						href="http://www.iaas.uni-stuttgart.de/RUS-data/INPROC-2013-18%20-%20Decision%20Support%20for%20Application%20Migration%20to%20the%20Cloud%20Challenges%20and%20Vision.pdf">an
-						approach of Andrikopoulos et al.</a> considering a vision of a
-					decision support system for Cloud migration. By this, decision
-					makers are supported through focusing on <i>decisions</i> and
-					supporting <i>tasks</i> that are important to be addressed when
-					intending an application migration to the Cloud.
-				</p>
-				<p>The CloudDSF comprises 17 decisions grouped in four main
-					decision points and a total of 10 supporting tasks. The elements
-					constitute a network where decisions are influencing each other and
-					decisions and tasks can affect each other.</p>
-			</div>
-			<div class="col-md-2"></div>
-			<div class="col-md-5">
-				<h3>About</h3>
-				<p>
-					This website is part of the Master's Thesis <i>Decision Support
-						for Application Migration to the Cloud</i> at <a
-						href="http://www.iaas.uni-stuttgart.de" target="_blank">IAAS
-						(University Stuttgart)</a> by Alexander Darsow.
-				</p>
-				<p>The main objective of the Master’s Thesis was the elaboration
-					and refinement of a conceptual view of a decision support system
-					for Cloud migration.</p>
-				<p>As part of this work a prototypical implementation of the
-					visualization was required that is published under the name
-					CloudDSF by this website.</p>
-			</div>
-		</div>
+		<!--/row-->
+
+
 	</div>
-	<hr>
+
+
 	<footer class="footer">
 		<div class="container">
 			<p>University of Sutttgart - Institute of Architecture of
