--- a/WebContent/knowledgeBase.html
+++ b/WebContent/knowledgeBase.html
@@ -72,12 +72,15 @@
 
 			<div class="col-sm-12 col-md-2 navbar-inverse sidebar-offcanvas"
 				id="sidebar" role="navigation">
-				<ul class="nav navbar-nav">
-					<li class="active"><a id="bt_treeLayout" href="#"> <span><strong>
-									Hierarchical Layout</strong></span></a></li>
-					<li><a id="btnList_DecRel" href="#"> <span>Decision Relations</span>
+				<ul class="nav navbar-nav ">
+					<li role="presentation"><a role="pill" data-toggle="pill"
+						id="btnList_treeLayout" href="#"> <span> Hierarchical
+								Layout</span></a></li>
+					<li role="presentation"><a role="pill" data-toggle="pill"
+						id="btnList_DecRel" href="#"> <span>Decision Relations</span>
 					</a></li>
-					<li><a id="btnList_OutRel" href="#"> <span>Outcome Relations</span>
+					<li role="presentation"><a role="pill" data-toggle="pill"
+						id="btnList_OutRel" href="#"> <span>Outcome Relations</span>
 					</a></li>
 				</ul>
 				<button id="toggleButton" type="button"
@@ -85,15 +88,12 @@
 					<span class="glyphicon glyphicon-chevron-left"></span>
 				</button>
 			</div>
-
 			<div class="col-sm-12 col-md-10">
 				<div class="row">
-					<div class="col-md-12">
-						
-					</div>
+					<div class="col-md-12"></div>
 				</div>
 				<div class="row">
-					<div id="visContent" class="col-md-10"></div>
+					<div id="visContent" class="col-md-12"></div>
 				</div>
 			</div>
 		</div>
@@ -109,6 +109,8 @@
 	<!-- Include for Visualization -->
 	<script src="js/cdsfPlus-layout.js" type="text/javascript"></script>
 	<script src="js/treeLayout.js" type="text/javascript"></script>
+	<script src="js/outcomeRelations.js" type="text/javascript"></script>
+	<script src="js/decisionRelations.js" type="text/javascript"></script>
 
 </body>
 </html>
