--- a/WebContent/knowledgeBase.html
+++ b/WebContent/knowledgeBase.html
@@ -15,15 +15,21 @@
 
 <!-- Global Style Sheets  -->
 <link href="./css/bootstrap.min.css" rel="stylesheet" />
+<link href="./css/bootstrap-multiselect.css" rel="stylesheet" />
 <link href="./css/cdsfPlus.css" rel="stylesheet" />
 
 <!-- Custom Style Sheets -->
 <link href="./css/knowledgeBase.css" rel="stylesheet" />
+<!-- <link rel="stylesheet"
+	href="//rawgithub.com/Caged/d3-tip/master/examples/example-styles.css"> -->
+
 
 <!-- JavaScript Libraries -->
 <script src="./js/lib/jquery-1.11.1.min.js" type="text/javascript"></script>
 <script src="./js/lib/bootstrap.min.js" type="text/javascript"></script>
+<script src="./js/lib/bootstrap-multiselect.js" type="text/javascript"></script>
 <script src="./js/lib/d3.4.13.min.js" type="text/javascript"></script>
+<script src="./js/lib/d3tip.js" type="text/javascript"></script>
 </head>
 
 <body>
@@ -73,7 +79,7 @@
 				id="sidebar" role="navigation">
 				<ul class="nav navbar-nav ">
 					<li role="presentation"><a role="pill" data-toggle="pill"
-						id="btnList_treeLayout" href="#"> <span> Hierarchical
+						id="btnList_treeLayout" href="#"> <span>Hierarchical
 								Layout</span></a></li>
 					<li role="presentation"><a role="pill" data-toggle="pill"
 						id="btnList_DecRel" href="#"> <span>Decision Relations</span>
@@ -89,34 +95,27 @@
 			</div>
 			<div class="col-sm-12 col-md-10">
 				<div class="row">
-					<div class="col-md-12"></div>
-					<!-- Toolbar for decision Graph -->
-					<div id="toolbarDecisions" class="hidden">
-						<div id="buttonGroupRelations" class="btn-toolbar">
-							<label class="btn btn-success"> <input type="checkbox"
-								value="Influencing" autocomplete="off">Influencing
-							</label> <label class="btn btn-danger"> <input value="Requiring"
-								type="checkbox" autocomplete="off">Requiring
-							</label> <label class="btn btn-warning"> <input type="checkbox"
-								value="Affecting" autocomplete="off">Affecting
-							</label> <label class="btn btn-primary"> <input type="checkbox"
-								value="Binding" autocomplete="off">Binding
-							</label>
+					<div class="col-md-6">
+						<!-- Toolbar for decision Graph -->
+						<div id="toolbarDecisions" class="hidden text-center">
+							<select id="relationTypes" multiple="multiple">
+								<option value="Influencing">Influencing</option>
+								<option value="Requiring">Requiring</option>
+								<option value="Affecting">Affecting</option>
+								<option value="Binding">Binding</option>
+							</select>
+						</div>
+
+						<!-- 	<div id="toolbarTree" class="hidden text-center"> -->
+						<div id="toolbarTree"
+							class="btn-group btn-group-justified hidden text-center"
+							role="group">
+							<a id="showDps" class="btn btn-default" role="button">Show
+								All Decision Points</a> <a id="showDecs" class="btn btn-default"
+								role="button">Show All Decisions</a> <a id="showOutcomes"
+								class="btn btn-default" role="button">Show All Outcomes</a>
 						</div>
 					</div>
-					<div id="toolbarTree" class="hidden">
-						<div id="buttonGroupTree" class="btn-toolbar">
-							<label class="btn btn-success"> <input type="checkbox"
-								value="" autocomplete="off">Influencing
-							</label> <label class="btn btn-danger"> <input value="Requiring"
-								type="checkbox" autocomplete="off">Requiring
-							</label> <label class="btn btn-warning"> <input type="checkbox"
-								value="Affecting" autocomplete="off">Affecting
-							</label> 
-						</div>
-					</div>
-
-
 				</div>
 				<div class="row">
 					<div id="visContent" class="col-md-12"></div>
